tests/snapshots/run_wpt_conformance__trtx_gather_float32_1D_tensor_and_int32_4D_indices_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gather.https.any.js gather float32 1D tensor and int32 4D indices default options, trtx
 gather :: gather float32 1D tensor and int32 4D indices default options: index 0: actual=-66.05901 expected=-37.6968 ulp=7165105 tolerance=4
  inputs: gatherInput: [-66.05901336669922, -68.9197006225586, -77.02045440673828, -26.158037185668945, 89.0337142944336, -45.89653396606445, 43.84803771972656, 48.81806945800781, 51.79948425292969, 41.94132614135742, -1.1303654909133911, -50.42131042480469, 90.2870101928711, 55.62076568603515, 44.92119598388672, 56.828636169433594, 10.829925537109377, -19.693084716796875, -37.696800231933594, 43.11057662963867, 0.9129875898361206, -7.699817180633545, 25.76774024963379, 73.60064697265625]; gatherIndices: [18, 18, 22, 11, 8, 15, 12, 11, 7, 13, 7, 7] (constant)
  expected gatherOutput: [-37.6968, -37.6968, 25.76774, -50.42131, 51.799484, 56.828636, 90.28701, -50.42131, 48.81807, 55.620766 ...] (len=12)
  actual gatherOutput: [-66.05901, -66.05901, -66.05901, -66.05901, -66.05901, -66.05901, -66.05901, -66.05901, -66.05901, -66.05901 ...] (len=12)
  expected gatherOutput full nd:
[-37.6968, -37.6968, 25.76774, -50.42131, 51.799484, 56.828636, 90.28701, -50.42131, 48.81807, 55.620766, ...] (len=12, shape=[1, 2, 2, 3])
  actual gatherOutput full nd:
[-66.05901, -66.05901, -66.05901, -66.05901, -66.05901, -66.05901, -66.05901, -66.05901, -66.05901, -66.05901, ...] (len=12, shape=[1, 2, 2, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherInput: f32[24];
  }

  consts {
    operand_0: i32[1, 2, 2, 3] @bytes([18, 0, 0, 0, 18, 0, 0, 0, 22, 0, 0, 0, 11, 0, 0, 0, 8, 0, 0, 0, 15, 0, 0, 0, 12, 0, 0, 0, 11, 0, 0, 0, 7, 0, 0, 0, 13, 0, 0, 0, 7, 0, 0, 0, 7, 0, 0, 0]);
  }

  nodes {
    [gatherOutput] = gather(gatherInput, operand_0, axis=0, label="");
  }

  outputs { gatherOutput; }
}
