tests/snapshots/run_wpt_conformance__trtx_gather_float32_2D_tensor_and_1D_indices_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gather.https.any.js gather float32 2D tensor and 1D indices default options, trtx
 gather :: gather float32 2D tensor and 1D indices default options: index 0: actual=-66.05901 expected=-77.020454 ulp=1436738 tolerance=4
  inputs: gatherInput: [-66.05901336669922, -68.9197006225586, -77.02045440673828, -26.158037185668945, 89.0337142944336, -45.89653396606445, 43.84803771972656, 48.81806945800781, 51.79948425292969, 41.94132614135742, -1.1303654909133911, -50.42131042480469, 90.2870101928711, 55.62076568603515, 44.92119598388672, 56.828636169433594, 10.829925537109377, -19.693084716796875, -37.696800231933594, 43.11057662963867, 0.9129875898361206, -7.699817180633545, 25.76774024963379, 73.60064697265625]; gatherIndices: [1, 10, 9, 0, 3, 5, 3, 8] (constant)
  expected gatherOutput: [-77.020454, -26.158037, 0.9129876, -7.699817, -37.6968, 43.110577, -66.05901, -68.9197, 43.848038, 48.81807 ...] (len=16)
  actual gatherOutput: [-66.05901, -68.9197, -66.05901, -68.9197, -66.05901, -68.9197, -66.05901, -68.9197, -66.05901, -68.9197 ...] (len=16)
  expected gatherOutput full nd:
[-77.020454, -26.158037, 0.9129876, -7.699817, -37.6968, 43.110577, -66.05901, -68.9197, 43.848038, 48.81807, ...] (len=16, shape=[8, 2])
  actual gatherOutput full nd:
[-66.05901, -68.9197, -66.05901, -68.9197, -66.05901, -68.9197, -66.05901, -68.9197, -66.05901, -68.9197, ...] (len=16, shape=[8, 2])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherInput: f32[12, 2];
  }

  consts {
    operand_0: i32[8] @bytes([1, 0, 0, 0, 10, 0, 0, 0, 9, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 5, 0, 0, 0, 3, 0, 0, 0, 8, 0, 0, 0]);
  }

  nodes {
    [gatherOutput] = gather(gatherInput, operand_0, axis=0, label="");
  }

  outputs { gatherOutput; }
}
